--- a/under the stars/html/contact.html
+++ b/under the stars/html/contact.html
@@ -49,7 +49,7 @@
                     <button class="btn-tertiary" type="submit">Join</button>
                 </form>
                 <div class="address">
-                    <p class="address__text">#12,sit main road,tumkur-78. <br> underthestars@abc.com <br> Tel.no.-45367854</p>
+                    <p class="address__text">#12,abc main road,qwerty <br> underthestars@abc.com <br> Tel.no.-453678545637 </p>
                 </div>
             </div>
         </section>
