--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         <footer class="footer">
             <div class="footer__details">
                 <h1 class="footer__heading">Under the stars</h1>
-                <p class="footer__text"> <b> &copy; 2020 ARAVAPALLI ANUDEEP ALL RIGHTS RESERVED </b> <br> Images taken from <a href="https://www.freepik.com/">freepik</a> and edited using <a href="https://www.gimp.org/">Gimp</a> <br> SVG icons from <a href="https://www.flaticon.com/">Flaticon</a> <br> Fonts from <a href="https://fonts.google.com">google fonts</a> </p>
+<!--                 <p class="footer__text"> <b> &copy; 2020 ARAVAPALLI ANUDEEP ALL RIGHTS RESERVED </b> <br> Images taken from <a href="https://www.freepik.com/">freepik</a> and edited using <a href="https://www.gimp.org/">Gimp</a> <br> SVG icons from <a href="https://www.flaticon.com/">Flaticon</a> <br> Fonts from <a href="https://fonts.google.com">google fonts</a> </p> -->
             </div>
 
             <div class="footer__nav">
